wow. let @dr-stynx run all day on agent code. left me with a pit of semi-nonsense. anywho -- mTool construction supports inst and doc sources. gutted tool and calculator holders from agent --put into respective features. fixed an index bug in lst. fixed a npe bug in rec. added tracer.mtron_stack and tracer.java_stack. realized these are two separate stacks and should be handled separately. only slightly integrated at this time. fixed a total shutdown bug in wsspace where an error (as opposed to an exception) brought the server down. better error handling around type casting. switched the semantics of str merge to interleave -- like String.join() in java. console status line is way prettier now with nice emoticon icons.